manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mavenexercise-service
spec:
  selector:
    app: mavenexercise 
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
